# fly

./: .env  .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  build.gradle  main.go  package-lock.json  package.json  run.sh
conf/: app.conf
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/config/: index.js
dashboard/public/: index.html  manifest.json
dashboard/src/: App.jsx  actions.js  intl.js  main.css  main.js  reducers.js  router.js  store.js
db/migrate/: 1505158178_locales.up.sql  1505158216_plugin-nut.down.sql  1505158216_plugin-nut.up.sql  1505158226_plugin-forum.up.sql  1505158229_plugin-survey.up.sql  1505158235_plugin-reading.up.sql  1505158249_plugin-ops-mail.up.sql  1505158251_plugin-ops-vpn.up.sql  1505158260_plugin-mall.down.sql  1505158260_plugin-mall.up.sql
db/migrations/: 20170920084441_locales.go  20170920084516_settings.go  20170920203731_nut.go  20170920203752_forum.go  20170920203809_survey.go  20170920203832_reading.go  20170920203837_ops-vpn.go  20170920203841_ops-mail.go  20170920203849_mall.go
locales/: en-US.ini  zh-Hans.ini
plugins/erp/: plugin.go
plugins/forum/: c-articles.go  c-comments.go  c-latest.go  c-tags.go  models.go  plugin.go
plugins/mall/: models.go  plugin.go
plugins/nut/: .gitignore  amqp.go  c-admin-cards.go  c-admin-friend-links.go  c-admin-links.go  c-admin-locales.go  c-admin-site.go  c-admin-status.go  c-admin-users.go  c-attachemtns.go  (+33 more)
routers/: router.go
src/: lib.rs  main.rs
templates/: deploy.sh  migration.go  nginx.conf
tests/: default_test.go  s3_test.go
(+186 files in other folders)
