[package]
name = "fly"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
docopt = "0.8"
docopt_macros = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.3"
env_logger = "0.3"
redis = "0.8"
postgres = "0.15"
# amqp = "0.1.0"
